# distributed_plonk

./: Cargo.toml  build.rs
config/: network.json
src/: config.rs  dispatcher.rs  dispatcher2.rs  hello_world.capnp  lib.rs  playground.rs  utils.rs  worker.rs
